--- a/angular-client/src/assets/i18n/fr.json
+++ b/angular-client/src/assets/i18n/fr.json
@@ -1,111 +1,111 @@
 {
     "ActiveCaseFile": {
-        "Active": "Active Case Files",
-        "NotActive":  "No active case files to display",
-        "Last": "Last update:",
-        "Priority": "Priority:",
-        "Created": "Created by:",
-        "LastUpdated": "Last updated by:",
-        "ViewProfile":"View Profile"
+        "Active": "Dossiers de cas actifs",
+        "NotActive":  "Il n'y a pas de dossiers de cas actifs",
+        "Last": "Dernière mise à jour:",
+        "Priority": "Priorité:",
+        "Created": "Créé par:",
+        "LastUpdated": "Dernière mise à jour par:",
+        "ViewProfile":"Voir le profil"
     },
      "CaseModal": {
-        "New": "New Case",
+        "New": "Nouveau cas",
         "Participant":"Participant:",
-        "Urgency":"Select urgency of request",
-        "Resources":"Select the resources for this case",
-        "Submit":"Submit",
-        "Cancel":"Cancel"
+        "Urgency":"Selectionne l'urgence de la requête",
+        "Resources":"Selectionne les ressources pour ce cas",
+        "Submit":"Soummetre",
+        "Cancel":"Annuler"
     },
       "CaseFiles": {
-        "Cases": "Cases",
-        "NoCases":"No cases to display.",
-        "Status":"Status:",
-        "Urgency":"Urgency:",
-        "Resources":"Resources:",
+        "Cases": "Cas",
+        "NoCases":"Pas de cas à afficher.",
+        "Status":"Statut:",
+        "Urgency":"Urgènce:",
+        "Resources":"Ressources:",
         "Type":"Type:",
         "Notes":"Notes:",
-        "Name":"Name:",
-        "Contacted":"Contacted:",
+        "Name":"Nom:",
+        "Contacted":"Contacté:",
         "Date":"Date:",
-        "Comment":"Comment:",
-        "Yes":"Yes:",
-        "No":"No:",
-        "SelectedResource":"Selected Resource:",
-        "Nothing":"Nothing selected",
-        "Clear":"clear",
-        "Save":"save",
-        "Delete":"delete"
+        "Comment":"Commentaire:",
+        "Yes":"Oui:",
+        "No":"Non:",
+        "SelectedResource":"Ressource selectionnée:",
+        "Nothing":"Aucune sélection",
+        "Clear":"initialiser",
+        "Save":"sauvegarder",
+        "Delete":"effacer"
     },
       "Activity": {
-        "Recent": "Recent Case File Activity",
+        "Recent": "Activité récente sur des cas",
         "Participant": "Participant:",
-        "Last": "Last update:",
-        "NoRecent":"No recent activity",
-        "RecentPhone":"Recent Phone Log Activity"
+        "Last": "Dernière mise à jour:",
+        "NoRecent":"Pas d'activité récente",
+        "RecentPhone":"Activité récente sur les appels entrants"
     },
       "DashBoard": {
         "TranslationSections": ""
     },
       "DocumentModal": {
-        "AddDocument": "Add a Document",
-        "Upload": "Upload Document",
-        "Submit": "Submit",
-        "Close": "Close"
+        "AddDocument": "Ajouter un document",
+        "Upload": "Télécharger en amont un document",
+        "Submit": "Soumettre",
+        "Close": "Fermer"
     },
       "Documents": {
         "Documents": "Documents",
-        "NoDocs": "No documents to display.",
-        "Attachments": "Attachments:",
-        "Delete": "Delete"
+        "NoDocs": "Il n'y a pas de documents à afficher.",
+        "Attachments": "Pièces jointes:",
+        "Delete": "Effacer"
     },
       "Login": {
-        "Login": "Login",
-        "Email": "Email",
-        "Password": "Password",
-        "Submit": "Submit"
+        "Login": "S'identifier",
+        "Email": "Courriel",
+        "Password": "Mot de passe",
+        "Submit": "Soumettre"
     },
       "Messages": {
         "Messages": "Messages:",
-        "Clear":"Clear"
+        "Clear":"Faire disparaître"
     },
       "AlertModal": {
-        "Ok": "OK"
+        "Ok": "D'accord"
     },
       "ConfirmModal": {
         "Confirmation": "Confirmation",
-        "Ok":"Ok",
-        "Cancel":"Cancel"
+        "Ok":"D'accord",
+        "Cancel":"Annuler"
     },
       "Notes": {
         "Notes": "Notes",
-        "No": "No notes to display.",
+        "No": "Il n'y a pas de notes à afficher.",
         "Note":"Note:",
-        "Attachment":"Attachment:"
+        "Attachment":"Pièce jointe:"
     },
       "NoteModal": {
-        "Create": "Create a Note",
-        "Upload": "Upload File",
-        "Submit":"Submit",
-        "Cancel": "Cancel"
+        "Create": "Créer une note ",
+        "Upload": "Télécharger en amont un fichier",
+        "Submit":"Soumettre",
+        "Cancel": "Annuler"
     },
       "Participants": {
     },
       "AddParticipant": {
-        "Legal": "Do not use participant's legal name",
-        "Name": "Name",
-        "NewParticipant":"New participant successfully added.",
-        "CouldNot":"Could not add new participant.",
-        "Pronouns": "Pronouns",
-        "Telephone": "Telephone",
-        "SocialMedia": "Social media provider (Twitter, Facebook)",
-        "SocialMediaAccount": "Social media account (@username)",
-        "EmailAddress": "Email address",
-        "Warning": "This is already associated to a participant!",
-        "Address": "Physical Address",
-        "Optional": "This is strictly optional",
-        "Submit": "Submit",
-        "Cancel": "Cancel",
-        "Update": "Update"
+        "Legal": "N'utilise pas de nom légal",
+        "Name": "Prénom",
+        "NewParticipant":"Nouveau participant ajouté avec succès.",
+        "CouldNot":"On n'a pas pu ajouter un nouveau participant.",
+        "Pronouns": "Pronoms",
+        "Telephone": "Téléphone",
+        "SocialMedia": "Plateforme média social (Twitter, Facebook)",
+        "SocialMediaAccount": "Compte sur le média social (@username)",
+        "EmailAddress": "Courriel",
+        "Warning": "Ce courriel est déjà associé avec un utilisateur",
+        "Address": "Adresse physique",
+        "Optional": "Strictement optionnel",
+        "Submit": "Soumettre",
+        "Cancel": "Annuler",
+        "Update": "Mettre à jour"
     },
       "EditParticipant": {
         "Username": "Participant username:",
@@ -117,182 +117,182 @@
         "EmailAddress": "Email address",
         "Address": "Physical Address",
         "Update": "Update",
-        "Cancel": "Update"
+        "Cancel": "Annuler"
     },
       "ParticipantProfile": {
-        "Pronouns": "Pronouns:",
-        "Email":"Email:",
-        "Phone":"Phone number:",
-        "SocialMedia":"Social media:",
-        "Address:":"Address:",
-        "SocialWorkers":"Social workers assigned:",
-        "New":"New case",
-        "AddNote":"Add Note",
-        "AddDocument":"Add Document",
-        "EditSocialWorkers":"Edit Social Workers"
+        "Pronouns": "Pronoms:",
+        "Email":"Courriel:",
+        "Phone":"Numéro de téléphone:",
+        "SocialMedia":"Média social:",
+        "Address:":"Adresse:",
+        "SocialWorkers":"Travailleur(e)s de cas assigné(e)s:",
+        "New":"Nouveau cas",
+        "AddNote":"Ajouter une note",
+        "AddDocument":"Ajouter un document",
+        "EditSocialWorkers":"Gérér les travailleur(e)s de cas"
     },
       "ViewParticipants": {
-        "Sort": "Sort by",
-        "Name": "Name",
-        "Updated": "Updated",
-        "Search": "Search",
-        "Username": "Username",
-        "Pronouns": "Pronouns:",
-        "Email":"Email:",
-        "Phone":"Phone number:",
-        "SocialMedia":"Social media:",
-        "Address:":"Address:",
-        "SocialWorkers":"Social workers assigned:",
-        "View":"View",
-        "Edit":"Edit"
+        "Sort": "Trier par",
+        "Name": "Nom",
+        "Updated": "Mise à jour",
+        "Search": "Chercher",
+        "Username": "Nom d'utilisateur",
+        "Pronouns": "Pronoms:",
+        "Email":"Courriel:",
+        "Phone":"Numéro de téléphone:",
+        "SocialMedia":"Média social:",
+        "Address":"Adresse:",
+        "SocialWorkers":"Travailleur(es) de cas assigné(e)s:",
+        "View":"Voir",
+        "Edit":"Éditer"
     },
       "PhoneLog": {
         "TranslationSections": ""
     },
       "AddPhoneLog": {
-        "PhoneCall":"Phone Call",
-        "Name": "Name of caller",
-        "Pronouns": "Pronouns",
-        "Type":"Type of caller",
-        "Phone": "Phone number",
-        "Reason": "Reason for call",
-        "Urgent": "Urgent",
+        "PhoneCall":"Appel téléphonique",
+        "Name": "Prénom de la personne qui appelle",
+        "Pronouns": "Pronoms",
+        "Type":"Catégorie de personne",
+        "Phone": "Numéro de téléphone",
+        "Reason": "Raison de l'appel",
+        "Urgent": "Urgènce",
         "Message": "Message",
-        "Hint": "Their message, when to call, extension number...",
-        "Log": "Log this call"
+        "Hint": "Leur message, quand appeler, numéro de poste...",
+        "Log": "Inscrire cet appel"
     },
       "EditPhoneLog": {
-        "Name": "Name",
-        "Pronouns": "Pronouns",
-        "Type":"Type of caller",
-        "Phone": "Phone number",
-        "Language": "Language",
-        "Reason": "Reason for call",
-        "Urgent": "Urgent",
+        "Name": "Prénom",
+        "Pronouns": "Pronoms",
+        "Type":"Catégorie de personne",
+        "Phone": "Numéro de téléphone",
+        "Language": "Langue",
+        "Reason": "Raison de l'appel",
+        "Urgent": "Urgènce",
         "Message": "Message",
-        "Hint": "Their message, when to call, extension number...",
-        "Update": "Message",
-        "Cancel": "Message"
+        "Hint": "Leur message, quand appeler, numéro de poste...",
+        "Update": "Mettre à jour",
+        "Cancel": "Annuler"
     },
       "ViewPhoneLog": {
-        "Pending": "Pending Phone Calls",
-        "Everything": "Everything up to date!",
-        "Type":"Type of caller:",
-        "Phone": "Phone number:",
-        "Date": "Date of the call:",
-        "Subject": "Subject",
-        "Urgent": "Urgent",
+        "Pending": "Retours d'appel",
+        "Everything": "Tout est à jour!",
+        "Type":"Catégorie de personne:",
+        "Phone": "Numéro de téléphone:",
+        "Date": "Date de l'appel:",
+        "Subject": "Raison de l'appel",
+        "Urgent": "Urgènce",
         "Message": "Message:",
-        "Note": "Note regarding the call:",
-        "Language":"Language:",
-        "LoggedBy":"Call logged by:",
-        "Resolve":"Resolve",
-        "Edit":"edit",
-        "Completed":"Completed Phone Calls",
-        "Nothing":"Nothing to show",
-        "Name": "Name",
-        "Pronouns": "Pronouns",
-        "CalledBy": "Called back by:",
-        "DateCalledBack":"Date called back:"
+        "Note": "Notes sur l'appel:",
+        "Language":"Langue:",
+        "LoggedBy":"Appel inscrit par:",
+        "Resolve":"Résoudre",
+        "Edit":"Éditer",
+        "Completed":"Appels téléphoniques completés",
+        "Nothing":"Rien à afficher",
+        "Name": "Nom",
+        "Pronouns": "Pronoms",
+        "CalledBy": "Appel retourné par:",
+        "DateCalledBack":"Date du retour d'appel:"
     },
       "Reports": {
-        "Reports": "Reports",
-        "Nothing": "Nothing to show"
+        "Reports": "Rapports",
+        "Nothing": "Rien à afficher"
     },"Resources": {
     },
       "AddResource": {
         "Type": "Type",
-        "Rtype": "Resource Type",
-        "Name": "Name",
-        "Email": "Email",
-        "Telephone": "Telephone",
-        "Location": "Location",
+        "Rtype": "Type de ressource",
+        "Name": "Nom",
+        "Email": "Courriel",
+        "Telephone": "Téléphone",
+        "Location": "Emplacement",
         "Notes": "Notes",
-        "Housing": "Housing",
-        "Term": "Term",
-        "Gender": "Gender",
-        "Constraints": "Constraints",
-        "Medical": "Medical",
-        "Cost": "Cost",
-        "Waitlist": "Waitlist Time",
-        "Schedule": "Schedule",
-        "Submit": "Submit",
-        "CouldNot":"Could not add new resource.",
-        "Added":"New resource successfully added."
+        "Housing": "Hébergement",
+        "Term": "Terme",
+        "Gender": "Genre",
+        "Constraints": "Contraintes",
+        "Medical": "Médical",
+        "Cost": "Coût",
+        "Waitlist": "Temps sur la liste d'attente",
+        "Schedule": "Horaire",
+        "Submit": "Soumettre",
+        "CouldNot":"On n'a pas pu ajouter cette nouvelle ressource.",
+        "Added":"Nouvelle ressource ajoutée avec succès."
     },
       "EditResource": {
-        "Name": "Name",
-        "Email": "Email",
-        "Telephone": "Telephone",
-        "Term": "Term",
-        "Location": "Location",
+        "Name": "Nom",
+        "Email": "Courriel",
+        "Telephone": "Téléphone",
+        "Term": "Terme",
+        "Location": "Emplacement",
         "Notes": "Notes",
-        "Housing": "Housing",
-        "Gender": "Gender",
-        "Constraints": "Constraints",
-        "Medical": "Medical",
-        "Cost": "Cost",
-        "Waitlist": "Waitlist Time",
-        "Schedule": "Schedule",
-        "Update": "Update",
-        "Cancel": "Cancel"
+        "Housing": "Hébergement",
+        "Gender": "Genre",
+        "Constraints": "Contraintes",
+        "Medical": "Médical",
+        "Cost": "Coût",
+        "Waitlist": "Temps sur la liste d'attente",
+        "Schedule": "Horaire",
+        "Update": "Mettre à jour",
+        "Cancel": "Annuler"
     },
       "ViewResource": {
-        "Sort":"Sort by",
-        "Name":"Name",
-        "Updated":"Updated",
-        "Location": "Location:",
-        "Telephone": "Telephone:",
-        "Email": "Email:",
-        "Term": "Term:",
-        "Gender": "Gender:",
-        "Constraints": "Constraints:",
-        "Free": "Free:",
-        "Approx":"Approximate Waitlist:",
-        "Schedule": "Schedule:",
+        "Sort":"Trier par",
+        "Name":"Nom",
+        "Updated":"Mise à jour",
+        "Location": "Emplacement:",
+        "Telephone": "Téléphone:",
+        "Email": "Courriel:",
+        "Term": "Terme:",
+        "Gender": "Genre:",
+        "Constraints": "Contraintes:",
+        "Free": "Coût:",
+        "Approx":"Temps sur la liste d'attente:",
+        "Schedule": "Horaire:",
         "Notes": "Notes:"
     },
       "Tasks": {
-        "Tasks": "Tasks",
-        "Completed":"Completed",
-        "Add":"Add task"
+        "Tasks": "Tâches",
+        "Completed":"Completées",
+        "Add":"Ajouter une tâche"
     },
       "TrashBin": {
-        "TrashBin": "Trash Bin",
-        "Nothing": "Nothing in the trash bin",
-        "Sure":"Are you sure you want to restore this record?",
-        "Restore":"Are you sure you want to restore this record?"
+        "TrashBin": "Bac de recyclage",
+        "Nothing": "Rien dans le bac de recyclage",
+        "Sure":"Est-tu certain(e) de vouloir effacer cette inscription?",
+        "Restore":"Est-tu sûr(e) de voiloir rétablir cette inscription?"
     },
       "AssignUsersModal": {
-        "Edit": "Edit Assigned Social Workers",
-        "Remove":"Remove",
-        "AddSW":"Add Social Worker",
-        "Add":"Add",
-        "Ok":"Ok"
+        "Edit": "Éditer les travailleur(e)s de cas assigné(e)s",
+        "Remove":"Enlèver",
+        "AddSW":"Ajouter un(e) travailler(e) de cas",
+        "Add":"Ajouter",
+        "Ok":"D'accord"
     },
       "RegisterUser": {
-        "Added":"New user successfully created.",
-        "CouldNot":"Could not add new user.",
-        "Regiser": "Register a User",
-        "Name": "Name",
-        "Pronouns": "Pronouns",
-        "Email": "Email",
-        "Password": "Password",
-        "Confirm": "Confirm password",
-        "Fail": "Passwords do not match",
-        "Admin": "Administrator",
-        "Regular": "Regular User",
-        "Submit":"Submit"
+        "Added":"Nouvel utilisateur ajouté avec succès.",
+        "CouldNot":"On n'a pas pu ajouter cet utilisateur.",
+        "Regiser": "Inscrire un utilisateur",
+        "Name": "Prénom",
+        "Pronouns": "Pronoms",
+        "Email": "Courriel",
+        "Password": "Mot de passe",
+        "Confirm": "Confirmer le mot de passe",
+        "Fail": "Les mots de passe ne sont pas identiques",
+        "Admin": "Administratreur(e)",
+        "Regular": "Utilisateur ordinaire",
+        "Submit":"Soumettre"
 
     },
       "ViewUsers": {
-        "Sort": "Sort by",
-        "Search":"Search",
-        "Name": "Name",
-        "Updated": "Updated",
-        "Email": "Email",
-        "Role": "Role:",
-        "Pronouns": "Pronouns"
+        "Sort": "Trier par",
+        "Search":"Chercher",
+        "Name": "Nom",
+        "Updated": "Mise à jour",
+        "Email": "Courriel",
+        "Role": "Rôle:",
+        "Pronouns": "Pronom"
     },
       "Users": {
         "TranslationSections": ""
