Basic future reference commit to add new entries into dictionary, Top Menu #41

--- a/angular-client/src/assets/i18n/en.json
+++ b/angular-client/src/assets/i18n/en.json
@@ -296,5 +296,10 @@
     },
       "Users": {
         "TranslationSections": ""
-    }
+    },
+      "TopMenu": {
+        "Participants":"Participants",
+        "Resources":"Resources",
+        "Phone Log":"Phone Log"
+      }
 }
