--- a/angular-client/src/assets/i18n/fr.json
+++ b/angular-client/src/assets/i18n/fr.json
@@ -296,5 +296,10 @@
     },
       "Users": {
         "TranslationSections": ""
-    }
+    },
+      "TopMenu": {
+        "Participants": "Participants",
+        "Resources": "Ressources",
+        "Phone Log": "Registre d'appels"
+      }
 }
