Many placeholders are still missing #41

--- a/angular-client/src/assets/i18n/en.json
+++ b/angular-client/src/assets/i18n/en.json
@@ -34,7 +34,10 @@
         "Nothing":"Nothing selected",
         "Clear":"clear",
         "Save":"save",
-        "Delete":"delete"
+        "Delete":"delete",
+        "CommentsHint": "Comments related to this resource",
+        "DateFormat":"m/dd/yyyy",
+        "CaseFiles.Resource": "Resource"
     },
       "Activity": {
         "Recent": "Recent Case File Activity",
