--- a/angular-client/src/assets/i18n/fr.json
+++ b/angular-client/src/assets/i18n/fr.json
@@ -34,7 +34,10 @@
         "Nothing":"Aucune sélection",
         "Clear":"initialiser",
         "Save":"sauvegarder",
-        "Delete":"effacer"
+        "Delete":"effacer",
+        "CommentsHint": "Commentaires en lien avec cette ressource",
+        "DateFormat":"m/jj/aaaa",
+        "CaseFiles.Resource": "Ressource"
     },
       "Activity": {
         "Recent": "Activité récente sur des cas",
