--- a/angular-client/src/assets/i18n/fr.json
+++ b/angular-client/src/assets/i18n/fr.json
@@ -304,5 +304,11 @@
         "Participants": "Participants",
         "Resources": "Ressources",
         "Phone Log": "Registre d'appels"
+      },
+      "navLinks":{
+        "Resources":"Resources",
+        "AddResource":"Add Resource",
+        "Participants":"Participants",
+        "AddParticipant":"Add Participant"
       }
 }
