Finished translating Spanish dict #41

--- a/angular-client/src/assets/i18n/es.json
+++ b/angular-client/src/assets/i18n/es.json
@@ -182,136 +182,136 @@
         "Pending": "Llamadas pendientes",
         "Everything": "Todo está actualizado!",
         "Type":"Tipo de persona que llamó:",
-        "Phone": "Phone number:",
-        "Date": "Date of the call:",
-        "Subject": "Subject",
-        "Urgent": "Urgent",
-        "Message": "Message:",
-        "Note": "Note regarding the call:",
-        "Language":"Language:",
-        "LoggedBy":"Call logged by:",
-        "Resolve":"Resolve",
-        "Edit":"Edit",
-        "Completed":"Completed Phone Calls",
-        "Nothing":"Nothing to show",
-        "Name": "Name",
-        "Pronouns": "Pronouns",
-        "CalledBy": "Called back by:",
-        "DateCalledBack":"Date called back:"
+        "Phone": "Número telefónico:",
+        "Date": "Fecha de la llamada:",
+        "Subject": "Tema",
+        "Urgent": "Urgente",
+        "Message": "Mensaje:",
+        "Note": "Nota relacionada con la llamada:",
+        "Language":"Idioma:",
+        "LoggedBy":"Llamada añadida por:",
+        "Resolve":"Resolver",
+        "Edit":"Editar",
+        "Completed":"Llamadas completadas",
+        "Nothing":"Nada que mostrar",
+        "Name": "Nombre",
+        "Pronouns": "Pronombres",
+        "CalledBy": "Llamado por:",
+        "DateCalledBack":"Fecha de la llamada:"
     },
       "Reports": {
-        "Reports": "Reports",
-        "Nothing": "Nothing to show"
+        "Reports": "Reportes",
+        "Nothing": "Nada que mostrar"
     },"Resources": {
     },
       "AddResource": {
-        "Type": "Type",
-        "Rtype": "Resource Type",
-        "Name": "Name",
-        "Email": "Email",
-        "Telephone": "Telephone",
-        "Location": "Location",
-        "Notes": "Notes",
-        "Housing": "Housing",
-        "Term": "Term",
-        "Gender": "Gender",
-        "Constraints": "Constraints",
+        "Type": "Tipo",
+        "Rtype": "Tipo de recurso",
+        "Name": "Nombre",
+        "Email": "Correo electrónico",
+        "Telephone": "Teléfono",
+        "Location": "Emplazamiento",
+        "Notes": "Notas",
+        "Housing": "Albergue",
+        "Term": "Plazo",
+        "Gender": "Género",
+        "Constraints": "Restricciones",
         "Medical": "Medical",
-        "Cost": "Cost",
-        "Waitlist": "Waitlist Time",
-        "Schedule": "Schedule",
-        "Submit": "Submit",
-        "CouldNot":"Could not add new resource.",
-        "Added":"New resource successfully added."
+        "Cost": "Costo",
+        "Waitlist": "Tiempo estimado de espera",
+        "Schedule": "Horario",
+        "Submit": "Someter",
+        "CouldNot":"No pudo añadir recurso.",
+        "Added":"Nuevo recurso añadido con éxito."
     },
       "EditResource": {
         "Name": "Name",
-        "Email": "Email",
-        "Telephone": "Telephone",
-        "Term": "Term",
-        "Location": "Location",
-        "Notes": "Notes",
-        "Housing": "Housing",
-        "Gender": "Gender",
-        "Constraints": "Constraints",
+        "Email": "Correo electrónico",
+        "Telephone": "Teléfono",
+        "Term": "Término",
+        "Location": "Emplazamiento",
+        "Notes": "Notas",
+        "Housing": "Albergue",
+        "Gender": "Género",
+        "Constraints": "Restricciones",
         "Medical": "Medical",
-        "Cost": "Cost",
-        "Waitlist": "Waitlist Time",
-        "Schedule": "Schedule",
-        "Update": "Update",
-        "Cancel": "Cancel"
+        "Cost": "Costo",
+        "Waitlist": "Tiempo de espera",
+        "Schedule": "Horario",
+        "Update": "Actualizar",
+        "Cancel": "Anular"
     },
       "ViewResource": {
-        "Sort":"Sort by",
-        "Name":"Name",
-        "Updated":"Updated",
-        "Location": "Location:",
-        "Telephone": "Telephone:",
-        "Email": "Email:",
-        "Term": "Term:",
-        "Gender": "Gender:",
-        "Constraints": "Constraints:",
-        "Free": "Cost:",
-        "Approx":"Approximate Waitlist:",
-        "Schedule": "Schedule:",
-        "Notes": "Notes:",
-        "Descending":"Descending",
-        "Ascending":"Ascending"
+        "Sort":"Ordenar por",
+        "Name":"Nombre",
+        "Updated":"Actualizado",
+        "Location": "Emplazamiento:",
+        "Telephone": "Teléfono:",
+        "Email": "Correo electrónico:",
+        "Term": "Término:",
+        "Gender": "Género:",
+        "Constraints": "Restricciones:",
+        "Free": "Costo:",
+        "Approx":"Tiempo estimado de espera:",
+        "Schedule": "Horario:",
+        "Notes": "Notas:",
+        "Descending":"Descendiente",
+        "Ascending":"Ascendiente"
     },
       "Tasks": {
-        "Tasks": "Tasks",
-        "Completed":"Completed",
-        "Add":"Add task"
+        "Tasks": "Tareas",
+        "Completed":"Completedas",
+        "Add":"Añadir tarea"
     },
       "TrashBin": {
-        "TrashBin": "Trash Bin",
-        "Nothing": "Nothing in the trash bin",
-        "Sure":"Are you sure you want to restore this record?",
-        "Restore":"Are you sure you want to restore this record?"
+        "TrashBin": "Cesta de reciclaje",
+        "Nothing": "Nada en la cesta de reciclaje",
+        "Sure":"¿De verdad borrar este registro?",
+        "Restore":"¿De verdad restaurar este registro?"
     },
       "AssignUsersModal": {
-        "Edit": "Edit Assigned Social Workers",
-        "Remove":"Remove",
-        "AddSW":"Add Social Worker",
-        "Add":"Add",
-        "Ok":"Ok"
+        "Edit": "Editar l@s trabajador@s asignad@s",
+        "Remove":"Remover",
+        "AddSW":"Añadir trabajador@ social",
+        "Add":"Añadir",
+        "Ok":"De acuerdo"
     },
       "RegisterUser": {
-        "Added":"New user successfully created.",
-        "CouldNot":"Could not add new user.",
+        "Added":"Nuev@ usuari@ agregad@.",
+        "CouldNot":"No pude añadir nuev@ usuari@.",
         "Regiser": "Register a User",
-        "Name": "First Name",
-        "Pronouns": "Pronouns",
-        "Email": "Email",
-        "Password": "Password",
-        "Confirm": "Confirm password",
-        "Fail": "Passwords do not match",
-        "Admin": "Administrator",
-        "Regular": "Regular User",
-        "Submit":"Submit"
+        "Name": "Nombre",
+        "Pronouns": "Pronombres",
+        "Email": "Correo electrónico",
+        "Password": "Contraseña",
+        "Confirm": "Confirmar contraseña",
+        "Fail": "Contraseñas no concuerdar",
+        "Admin": "Administrador@",
+        "Regular": "Usuari@ regular",
+        "Submit":"Someter"
 
     },
       "ViewUsers": {
-        "Sort": "Sort by",
-        "Search":"Search",
-        "Name": "Name",
-        "Updated": "Updated",
-        "Email": "Email",
-        "Role": "Role:",
-        "Pronouns": "Pronouns"
+        "Sort": "Ordenar por",
+        "Search":"Búsqueda",
+        "Name": "Nombre",
+        "Updated": "Actualizado",
+        "Email": "Correo",
+        "Role": "Rol:",
+        "Pronouns": "Pronombres"
     },
       "Users": {
         "TranslationSections": ""
     },
       "TopMenu": {
-        "Participants":"Participants",
-        "Resources":"Resources",
-        "Phone Log":"Phone Log"
+        "Participants":"Participantes",
+        "Resources":"Recursos",
+        "Phone Log":"Registro de llamadas"
       },
       "navLinks":{
-        "Resources":"Resources",
-        "AddResource":"Add Resource",
-        "Participants":"Participants",
-        "AddParticipant":"Add Participant"
+        "Resources":"Recursos",
+        "AddResource":"Añadir recursos",
+        "Participants":"Participantes",
+        "AddParticipant":"Añadir participante"
       }
 }
