Added missing dashboard translations. #41

--- a/angular-client/src/assets/i18n/en.json
+++ b/angular-client/src/assets/i18n/en.json
@@ -313,5 +313,14 @@
         "AddResource":"Add Resource",
         "Participants":"Participants",
         "AddParticipant":"Add Participant"
+      },
+      "dashboardLinks":{
+        "Dashboard":"Dashboard",
+        "Tasks":"Tasks",
+        "Active":"Active Case Files",
+        "Phone":"Phone Log",
+        "Manage":"Manage Users",
+        "Reports":"Reports",
+        "Bin":"Trash Bin"
       }
 }
