#41 Added select that changes the language

--- a/angular-client/src/assets/i18n/en.json
+++ b/angular-client/src/assets/i18n/en.json
@@ -9,7 +9,7 @@
         "ViewProfile":"View Profile"
     },
      "CaseModal": {
-        "New": "New Case",
+        "New": "New Cases",
         "Participant":"Participant:",
         "Urgency":"Select urgency of request",
         "Resources":"Select the resources for this case",
